# twenty-app

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  biome.json  components.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml
app/: layout.tsx  page.tsx
components/: instance.tsx
components/ui/: button.tsx  input.tsx  label.tsx  sonner.tsx
lib/tauri/: settings.ts
scripts/: release.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  config.rs  lib.rs  listeners.rs  main.rs  tray.rs
src-tauri/src/commands/: mod.rs  settings.rs
src-tauri/src/tray/: linux.rs  mod.rs  native.rs  system.rs
src-tauri/src/windows/: main.rs
store/: instance.ts
styles/: globals.css
types/: instance.ts
utils/: normalizeUrl.ts  startInstance.ts
